# cifar-10-loader-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
doc/: search-index.js
doc/cifar_10_loader/: CifarDataset.t.html  sidebar-items.js
doc/cifar_10_loader/image_pub/: CifarImage.t.html
doc/src/cifar_10_loader/: dataset.rs.html  image_private.rs.html  lib.rs.html
docs/: index.html
docs/cifar_10_loader/: index.html  struct.CifarDataset.html  struct.CifarImage.html
docs/cifar_10_loader/dataset/: struct.CifarDataset.html
docs/cifar_10_loader/image_pub/: struct.CifarImage.html
docs/src/cifar_10_loader/: image_pub.rs.html
src/: dataset.rs  image.rs  image_private.rs  image_pub.rs  lib.rs  test.rs
