[package]
authors = ["Sakamoto Yoshiki <g196010r@icu.ac.jp>"]
description = "Crate of loading cifar10"
documentation = "https://docs.rs/cifar_10_loader/"
license = "MIT"
name = "cifar_10_loader"
readme = "README.md"
repository = "https://github.com/29rou/cifar-10-loader-rs"
version = "0.2.1"

[dependencies]
itertools = "*"
regex = "*"
walkdir = "*"
rand = "0.5.0-pre.0"

[dependencies.image]
default-features = false
version = "*"

[dependencies.rayon]
optional = true
version = "*"

[dev-dependencies]
curl = "*"
find_folder = "*"
image = "*"
rand = "0.5.0-pre.0"

[features]
benchmarks = ["image/benchmarks"]
default = [
    "rayon",
]
[lib]
name = "cifar_10_loader"
path = "./src/lib.rs"
